altered some colors and fixed some spacing

--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -419,9 +419,11 @@ main {
   display: grid;
   grid-area: hero;
   align-items: center;
+  justify-content: center;
 }
 .hero img {
-  width: 90%;
+  width: 100%;
+  justify-content: center;
 }
 .hero ul {
   display: grid;
@@ -591,6 +593,7 @@ p {
 ============= */
 button {
   cursor: pointer;
+  padding: 10px;
 }
 
 .yellow-button {
@@ -670,7 +673,10 @@ header > div section img {
 /* =============
     Footer
 ============= */
-.hero-img {
+.hero {
+  justify-content: center;
+}
+.hero .hero-img {
   background: url("/deploy/img/heroimage.jpg");
   background-size: cover;
   background-position: center;
@@ -678,41 +684,41 @@ header > div section img {
   width: 100%;
   padding: 10px;
 }
-
-.herotxt {
+.hero .herotxt {
   width: 65%;
+  padding: 20px;
   margin: auto auto;
-  text-align: center;
+  text-align: left;
+  justify-content: center;
 }
-.herotxt li {
-  padding: 10px;
+.hero .herotxt li {
+  padding: 20px;
   margin: 10px;
   background-color: #023047;
 }
-.herotxt li .new-content {
+.hero .herotxt li .new-content {
   padding: 0 30px 30px;
 }
-.herotxt li p {
+.hero .herotxt li p {
   font-size: 1rem;
   line-height: 1.4;
 }
 @media (min-width: 768px) {
-  .herotxt li {
+  .hero .herotxt li {
     width: 75%;
     margin: 30px auto;
   }
 }
-
-.contactinfo {
+.hero .contactinfo {
+  justify-content: center;
   align-items: center;
-  width: 65%;
   margin: 10px;
   padding: 10px;
   text-align: center;
   background-color: #023047;
 }
 @media (min-width: 768px) {
-  .contactinfo {
+  .hero .contactinfo {
     width: 75%;
     margin: 30px auto;
   }
@@ -773,23 +779,22 @@ form button:hover {
 .whatsnew h1 {
   font-weight: 400;
   font-size: 1.6875rem;
+  padding: 5px 10px;
 }
 .whatsnew li {
-  background: #F8CD63;
+  background: #023047;
   margin-bottom: 15px;
   box-shadow: 1px 1px 3px #FAE06A;
 }
-.whatsnew li .new-content {
-  padding: 10px 30px 30px;
-}
 .whatsnew li button {
-  background: #FAE06A;
+  background: #023047;
   border: none;
-  padding: 5px 10px;
+  padding: 10px;
 }
 .whatsnew li p {
   font-size: 1rem;
   line-height: 1.4;
+  padding: 10px;
 }
 @media (min-width: 768px) {
   .whatsnew {
@@ -812,6 +817,7 @@ form button:hover {
 
 .new-image {
   height: 180px;
+  justify-content: center;
 }
 
 #new-gallery-1 .new-image {
