--- a/dev/scss/base/_base.scss
+++ b/dev/scss/base/_base.scss
@@ -83,9 +83,10 @@ main{
 	display: grid;
 	grid-area: hero;
 	align-items: center;
-
+	justify-content: center;
 	img {
-		width: 90%;
+		width: 100%;
+		justify-content: center;
 	}
 
 	ul {
