--- a/dev/scss/components/_buttons.scss
+++ b/dev/scss/components/_buttons.scss
@@ -3,6 +3,7 @@
 ============= */
 button {
     cursor: pointer;
+    padding: 10px;
 }
 
 .yellow-button {
